--- a/univer/requirements.txt
+++ b/univer/requirements.txt
@@ -1,12 +1,11 @@
 asgiref==3.7.2
-black==23.11.0
 certifi==2023.7.22
 charset-normalizer==3.3.2
 click==8.1.7
 colorama==0.4.6
 coreapi==2.3.3
 coreschema==0.0.4
-Django==4.2.7
+Django==5.0.0
 django-rest-swagger==2.2.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.3.0
@@ -34,3 +33,6 @@ uritemplate==4.1.1
 urllib3==2.0.7
 django-cors-headers==4.3.0
 django-filter==23.3
+
+pytest~=7.4.3
+environ~=1.0
